# games_engineering

./: .gitignore  CMakeLists.txt  Entity.cpp  Entity.h  README.md  boiler_plate.cpp
lib_ecm/: ecm.cpp  ecm.h
lib_maths/: maths.h
lib_tile_level_loader/: Levelsystem.cpp  Levelsystem.h
practical_1/: main.cpp
practical_2/: .cpp  Invader.cpp  Invader.h  Ship.cpp  Ship.h  bullet.cpp  bullet.h  game.h  main.cpp
practical_3/: entity.cpp  entity.h  main.cpp  player.cpp  player.h
practical_4/: entity.cpp  entity.h  ghost.cpp  ghost.h  main.cpp  pacman.cpp  pacman.h  player.cpp  player.h  scene.cpp  scene.h  system_renderer.cpp  system_renderer.h
res/levels/: maze_3.txt
